# Pointers-Series

./: .gitignore  README.md
part_2_raw_pointers/: CMakeLists.txt  test.bat  test.sh
part_2_raw_pointers/src/: i1_stack.cpp  i2_heap.cpp  i3_function.cpp  i4_array.cpp  i5_npc_example.cpp  i6_real_world_simulate.cpp
part_3_pitfalls/: CMakeLists.txt
part_3_pitfalls/src/: i1_uninitialized_pointer.cpp  i2_nullptr_dereference.cpp  i3_returning_stack_pointer.cpp  i4_memory_leak.cpp  i5_dangling_pointer.cpp  i6_double_delete.cpp  i7_stack_pointer_delete.cpp  i8_mismatched_delete.cpp  i9_pointer_arithmetic.cpp
